--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "astro": "^5.13.7"
   },
   "devDependencies": {
-    "@astrojs/vercel": "^8.2.7",
+    "@astrojs/vercel": "8.2.6",
     "sharp": "^0.34.3"
   }
 }
